# llm

demo2/: pom.xml
entrydemo/: demo_load.py  setup.cfg
entrydemo/hello_pkg/: plugin.py
one/: 4.py  5.py  config.ini  custom_auth.py  first.py  three.py  track.py  two.py
one/mlruns/0/: meta.yaml
one/mlruns/0/443e95152cd74405a337d8dadb4355e7/: meta.yaml
one/mlruns/0/443e95152cd74405a337d8dadb4355e7/metrics/: accuracy
one/mlruns/0/443e95152cd74405a337d8dadb4355e7/tags/: mlflow.runName
one/mlruns/0/b08b93c7587a4acd84169228a6707f3f/: meta.yaml
one/mlruns/0/b08b93c7587a4acd84169228a6707f3f/metrics/: accuracy
one/mlruns/0/b08b93c7587a4acd84169228a6707f3f/tags/: mlflow.runName
one/mlruns/0/datasets/9c00d47180b02bd71670c5e9f69a8b59/: meta.yaml
one/mlruns/0/models/m-08188b37e061465296526f18df8b6c2a/: meta.yaml
one/mlruns/0/models/m-0986f5bc96064fb4aceaafd08b3f0cbf/: meta.yaml
one/mlruns/0/models/m-13172d53b6a1484caafeef7a6e1f4a90/: meta.yaml
one/mlruns/0/models/m-13541efbf6d84b95aadc5c65a9bdf03c/: meta.yaml
one/mlruns/0/models/m-192d4878c46e4eafb04ce1820ada2727/: meta.yaml
one/mlruns/0/models/m-25724eca64a04a27b5515e157b7e9da1/: meta.yaml
one/mlruns/0/models/m-389b5a6639fa4f3ba5fe5ad4e802e621/: meta.yaml
one/mlruns/135121010939591741/: meta.yaml
one/mlruns/410842853965534779/: meta.yaml
three/: cud.py
two/: 1.py  get_y.py  http_request_client.py  http_request_client1.py  task.py
web/config_app/: app.py
web/config_app/static/: styles.css
web/config_app/templates/: index.html  list.html
(+117 files in other folders)
