[metadata]
name = hello-entrypoint-demo
version = 0.1.0
description = Demo for Python entry_points

[options]
packages = find:

[options.entry_points]
auth.plugins =
    sample_auth = hello_pkg.plugin:SimpleAuth
    admin_auth = hello_pkg.plugin:AdminAuth

;goodbye.plugins =
;    say_goodbye = hello_pkg.plugin:goodbye
